--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   </head>
   <body>
     <h1>Trip to European countries!!</h1>
-      <p>Brugge</p>
-      <p><img src="brugge1.JPG"><p/>
+      <p>Sri Lanka</p>
+      <p><img src="srilanka.mp4"><p/>
        <p>
          <a href="http://whc.unesco.org/en/list/996">UNESCO website link </a>
        </p>
-      <p>Amsterdam</p>
-      <p><img src="ams1.JPG"><p/>
+
   </body>
 </html>
