added some excitement

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CHECK IT OUT FRIENDS</title>
   </head>
   <body>
-    <h1>Trip to European countries!!</h1>
+    <h1>Trip to European countries woo!!</h1>
       <p>Sri Lanka</p>
       <p><img src="srilanka.mp4"><p/>
        <p>
